--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "json-server --watch data/db.json --port 3000"
+    "build": "tailwindcss -i ./public/css/input.css -o ./public/css/output.css",
+    "watch": "tailwindcss -i ./public/css/input.css -o ./public/css/output.css --watch"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@tailwindcss/cli": "^4.1.4",
-    "json-server": "^1.0.0-beta.3",
-    "node-fetch": "^3.3.2",
-    "tailwindcss": "^4.1.4"
+    "@tailwindcss/cli": "^4.1.8",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4"
   }
 }
